<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipChildren="false"
    tools:context=".ui.activity.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher" />
        </androidx.cardview.widget.CardView>


        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/login_account"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/account" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="120dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_login"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/login"
                    android:padding="8dp"
                    android:src="@drawable/ic_action_login" />
            </androidx.cardview.widget.CardView>

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/btn_login"
                android:hint="@string/password"
                android:inputType="textPassword" />


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_reg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_reg_now"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/reg"
            android:textColor="@android:color/holo_blue_dark" />
    </LinearLayout>
</RelativeLayout>